Now we and AI can sign research agreement.

--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -161,6 +161,8 @@ Cost of acquiring new tiles reduced by 25% = Cena za nákup nového území měs
 Porcelain Tower = Porcelánová pagoda
 'Things always seem fairer when we look back at them, and it is out of that inaccessible tower of the past that Longing leans and beckons.'  - James Russell Lowell = 'Věci se vždy zdají spravedlivější, když se na ně podíváme zpět, a to je z té nepřístupné věže minulosti, která se dlouze naklání a kývá.' - James Russell Lowell
 Free great scientist appears = Získáme Velkého Vědce zdarma
+ # Requires translation!
+Science gained from research agreements +50% = 
 
 Ironworks = Železárny
 Armory = Zbrojnice
@@ -1384,6 +1386,8 @@ Who knows what the future holds? = Kdo ví, co nám přinese budoucnost?
 +10% science and production in all cities = +10% Výzkum a Produkce ve všech městech
 Improves movement speed on roads = Zvyšuje rychlost pohybu na cestách
 Enables conversion of city production to science = Dovoluje přepnout městskou produkci na výzkum
+ # Requires translation!
+Enables Research agreements = 
 Enables conversion of city production to gold = Dovoluje přepnout městskou produkci na zlato
 Enables embarkation for land units = Zpřístupní možnost nalodění se pozemním jednotkám
 Enables embarked units to enter ocean tiles = Umožňuje naloděným jednotkám vyplout na oceán
