--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -156,6 +156,8 @@ Cost of acquiring new tiles reduced by 25% = Coût d'acquisition de nouvelles ca
 Porcelain Tower = Tour de Porcelaine
 'Things always seem fairer when we look back at them, and it is out of that inaccessible tower of the past that Longing leans and beckons.'  - James Russell Lowell = 'Les choses semblent toujours plus juste quand nous les observons à posteriori, c'est de cette tour inaccessible du passé que Longing se penche et fait signe.' - James Russell Lowell
 Free great scientist appears = Un scientifique illustre gratuit apparaît
+ # Requires translation!
+Science gained from research agreements +50% = 
 
 Ironworks = Atelier métallurgique
 Armory = Arsenal
@@ -1330,6 +1332,8 @@ Who knows what the future holds? = Qui sait ce que l'avenir réserve?
 +10% science and production in all cities = +10% science et production dans toutes les villes
 Improves movement speed on roads = Améliore la vitesse de déplacement sur les routes
 Enables conversion of city production to science = Permet la conversion de la production des villes en science
+ # Requires translation!
+Enables Research agreements = 
 Enables conversion of city production to gold = Permet la conversion de la production des villes en or
 Enables embarkation for land units = Permet d'embarquer les unités terrestres
 Enables embarked units to enter ocean tiles = Permet aux unités embarqués de traverser les cases d'océan
