--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -162,6 +162,8 @@ Cost of acquiring new tiles reduced by 25% = Kosten um neue Felder zu kaufen ist
 Porcelain Tower = Porzellan Turm
 'Things always seem fairer when we look back at them, and it is out of that inaccessible tower of the past that Longing leans and beckons.'  - James Russell Lowell = 'Die Dinge erscheinen immer schöner, wenn wir auf sie zurückblicken, und aus diesem unzugänglichen Turm die Vergangenheit Sehnsüchtig lehnt und winkt.'  - James Russell Lowell
 Free great scientist appears = Eine kostenlose Große Wissenschaftlerin erscheint
+ # Requires translation!
+Science gained from research agreements +50% = 
 
 Ironworks = Eisenhüttenwerk
 Armory = Waffenkammer
@@ -1395,6 +1397,8 @@ Who knows what the future holds? = Wer weiß was die Zukunft für uns bereithäl
 +10% science and production in all cities = +10% Wissenschaft und Produktion in allen Städten
 Improves movement speed on roads = Erhöht die Bewegungsgeschwindigkeit auf Straßen
 Enables conversion of city production to science = Erlaubt das Umwandeln von städtischer Produktion in Wissenschaft
+ # Requires translation!
+Enables Research agreements = 
 Enables conversion of city production to gold = Erlaubt das Umwandeln von städtischer Produktion in Gold
 Enables embarkation for land units = Ermöglicht das Einbooten von Landeinheiten
 Enables embarked units to enter ocean tiles = Erlaubt es, eingebooteten Einheiten Ozeanfelder zu überqueren
