--- a/android/assets/jsons/translationsByLanguage/Malay.properties
+++ b/android/assets/jsons/translationsByLanguage/Malay.properties
@@ -244,6 +244,8 @@ Porcelain Tower =
 'Things always seem fairer when we look back at them, and it is out of that inaccessible tower of the past that Longing leans and beckons.'  - James Russell Lowell = 
  # Requires translation!
 Free great scientist appears = 
+ # Requires translation!
+Science gained from research agreements +50% = 
 
  # Requires translation!
 Ironworks = 
@@ -2239,6 +2241,8 @@ Who knows what the future holds? =
 Improves movement speed on roads = 
  # Requires translation!
 Enables conversion of city production to science = 
+ # Requires translation!
+Enables Research agreements = 
  # Requires translation!
 Enables conversion of city production to gold = 
  # Requires translation!
