--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -156,6 +156,8 @@ Cost of acquiring new tiles reduced by 25% = Koszt zakupu nowych pól obniżony 
 Porcelain Tower = Porcelanowa Wieża
 'Things always seem fairer when we look back at them, and it is out of that inaccessible tower of the past that Longing leans and beckons.'  - James Russell Lowell = 'Kiedy patrzymy w przeszłość, wszystko wydaje się piękniejsze i właśnie w tej niedostępnej wieży przeszłości rodzi się Tęsknota.' - James Russell Lowell
 Free great scientist appears = Pojawia się darmowy Wielki Naukowiec
+ # Requires translation!
+Science gained from research agreements +50% = 
 
 Ironworks = Huta
 Armory = Zbrojownia
@@ -1301,6 +1303,8 @@ Who knows what the future holds? = Kto wie, co kryje przyszłość?
 +10% science and production in all cities = +10% nauki i produkcji we wszystkich miastach
 Improves movement speed on roads = Zwiększa prędkość poruszania się na drogach
 Enables conversion of city production to science = Umożliwia konwersję produkcji miejskiej na naukę
+ # Requires translation!
+Enables Research agreements = 
 Enables conversion of city production to gold = Umożliwia konwersję produkcji miejskiej na złoto
 Enables embarkation for land units = Umożliwia jednostkom naziemnym zaokrętować
 Enables embarked units to enter ocean tiles = Umożliwia zaokrętowanym jednostkom wpłynąć na pola oceanu
