--- a/android/assets/jsons/translationsByLanguage/Portuguese.properties
+++ b/android/assets/jsons/translationsByLanguage/Portuguese.properties
@@ -161,6 +161,8 @@ Cost of acquiring new tiles reduced by 25% = Custo de compra de novos terrenos r
 Porcelain Tower = Torre de Porcelana
 'Things always seem fairer when we look back at them, and it is out of that inaccessible tower of the past that Longing leans and beckons.'  - James Russell Lowell = 'As coisas sempre parecem mais justas quando nos lembramos delas, e é dessa torre inacessível do passado que a saudade se inclina e acena.' - James Russel Lowell
 Free great scientist appears = Aparece um Grande Cientista grátis
+ # Requires translation!
+Science gained from research agreements +50% = 
 
 Ironworks = Siderurgia
 Armory = Arsenal
@@ -1560,6 +1562,8 @@ Who knows what the future holds? = Quem sabe o que o futuro reserva?
 +10% science and production in all cities = +10% de ciência e produção em todas as cidades
 Improves movement speed on roads = Melhora velocidade de movimento em estradas
 Enables conversion of city production to science = Habilita a conversão de produção das cidades para ciência
+ # Requires translation!
+Enables Research agreements = 
 Enables conversion of city production to gold = Habilita a conversão da produção das cidades para ouro
 Enables embarkation for land units = Permite o embarque de unidades terrestres
 Enables embarked units to enter ocean tiles = Permite que unidades embarcadas entrem em hexágonos oceânicos
