--- a/android/assets/jsons/translationsByLanguage/Romanian.properties
+++ b/android/assets/jsons/translationsByLanguage/Romanian.properties
@@ -189,6 +189,8 @@ Porcelain Tower = Turnul de Porțelan
  # Requires translation!
 'Things always seem fairer when we look back at them, and it is out of that inaccessible tower of the past that Longing leans and beckons.'  - James Russell Lowell = 
 Free great scientist appears = Apare un mare om de știință gratuit
+ # Requires translation!
+Science gained from research agreements +50% = 
 
 Ironworks = Fierărie
 Armory = Depozit de arme
@@ -1584,6 +1586,8 @@ Who knows what the future holds? = Cine poate ști ce ne rezervă viitorul?
 +10% science and production in all cities = +10% știință și producție în toate orașele
 Improves movement speed on roads = Îmbunătățește viteza de deplasare pe drumuri
 Enables conversion of city production to science = Permite conversia producției orașului la știință
+ # Requires translation!
+Enables Research agreements = 
 Enables conversion of city production to gold = Permite conversia producției orașului la aur
 Enables embarkation for land units = Permite îmbarcarea unităților terestre
 Enables embarked units to enter ocean tiles = Permite unităților îmbarcate să meargă în celulele ocean
