--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -156,6 +156,8 @@ Cost of acquiring new tiles reduced by 25% = El coste de adquirir nuevas casilla
 Porcelain Tower = Torre de Porcelana
 'Things always seem fairer when we look back at them, and it is out of that inaccessible tower of the past that Longing leans and beckons.'  - James Russell Lowell = 'Las cosas parecen más justas cuando volvemos la vista atrás para verlas, y es por esa inaccesible torre del pasado que el anhelo se asoma y nos llama con la mano.' - James Russell Lowell
 Free great scientist appears = Aparece un Gran Científico gratis
+ # Requires translation!
+Science gained from research agreements +50% = 
 
 Ironworks = Herrería
 Armory = Armería
@@ -1330,6 +1332,8 @@ Who knows what the future holds? = ¿Quién sabe qué nos depara el futuro?
 +10% science and production in all cities = +10% de ciencia y producción en todas las ciudades
 Improves movement speed on roads = Mejora la velocidad de movimiento en carreteras
 Enables conversion of city production to science = Habilita la conversión de producción a ciencia
+ # Requires translation!
+Enables Research agreements = 
 Enables conversion of city production to gold = Habilita la conversión de producción a oro
 Enables embarkation for land units = Habilita la embarcacion a las unidades de tierra
 Enables embarked units to enter ocean tiles = Habilita a las unidades embarcadas a entrar en océanos
