--- a/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
@@ -160,6 +160,8 @@ Cost of acquiring new tiles reduced by 25% = 購買新地塊花費-25%
 Porcelain Tower = 大報恩寺塔
 'Things always seem fairer when we look back at them, and it is out of that inaccessible tower of the past that Longing leans and beckons.'  - James Russell Lowell = “我們所失去的總是要在回望之時才更知道它的美好，而那曾經不可一世的高塔如今是多麼的可望能夠有所依靠。”——詹姆斯·羅素·洛威爾（美國詩人）
 Free great scientist appears = 免費的大科學家出現
+ # Requires translation!
+Science gained from research agreements +50% = 科研協定產出的科研+50%
 
 Ironworks = 鋼鐵廠
 Armory = 軍械所
@@ -339,14 +341,10 @@ Indeed! = 這是無比正確的選擇！
 Denounce ([numberOfTurns] turns) = 譴責([numberOfTurns]回合)
 We will remember this. = 這種侮辱我們絕不會忘記。請好自為之！
 
- # Requires translation!
-[civName] has declared war on [targetCivName]! = 
- # Requires translation!
-[civName] and [targetCivName] have signed the Peace Treaty! = 
- # Requires translation!
-[civName] and [targetCivName] have signed the Declaration of Friendship! = 
- # Requires translation!
-[civName] has denounced [targetCivName]! = 
+[civName] has declared war on [targetCivName]! = [civName]向[targetCivName]宣戰！
+[civName] and [targetCivName] have signed the Peace Treaty! = [civName]和[targetCivName]簽署了和平條約！
+[civName] and [targetCivName] have signed the Declaration of Friendship! = [civName]和[targetCivName]簽署了友誼宣言！
+[civName] has denounced [targetCivName]! = [civName]譴責了[targetCivName]！
 
 Unforgivable = 仇深似海
 Enemy = 宿命之敵
@@ -893,8 +891,8 @@ Are you sure you want to sell this [building]? = 您真的想賣掉[building]嗎
 Great person points = 偉人點數
 Current points = 目前點數
 Points per turn = 獲得點數/回合
-Convert production to gold at a rate of 4 to 1 = 轉換1/4產能為金錢
-Convert production to science at a rate of 4 to 1 = 轉換1/4產能為科研
+Convert production to gold at a rate of 4 to 1 = 按4:1的比例轉化產能為金錢
+Convert production to science at a rate of 4 to 1 = 按4:1的比例轉化產能為科研
 The city will not produce anything. = 城市將不會建造/訓練任何項目
 
 # Technology UI
@@ -1210,7 +1208,7 @@ Free Speech = 言論自由
 Democracy = 民主主義
 Specialists produce half normal unhappiness = 城市人口中專業人員產生的不滿減半
 Freedom Complete = 完整的自由政策
-Tile yield from great improvement +100%, golden ages increase by 50% = 建有設施的地區產出+100%，黃金時代持續時間+50%
+Tile yield from great improvement +100%, golden ages increase by 50% = 建有偉人設施的地區產出+100%，黃金時代持續時間+50%
 
 Autocracy = 獨裁政策
 -33% unit upkeep costs = 單位維護費-33%
@@ -1385,6 +1383,8 @@ Who knows what the future holds? = 誰知道未來會怎樣？
 +10% science and production in all cities = 所有城市+10%的科研和產能輸出
 Improves movement speed on roads = 提高道路上的移動速度
 Enables conversion of city production to science = 可將城市產能轉化為科研
+ # Requires translation!
+Enables Research agreements = 
 Enables conversion of city production to gold = 可將城市產能轉化為金錢
 Enables embarkation for land units = 陸軍單位擁有船運能力
 Enables embarked units to enter ocean tiles = 擁有船運能力的單位能夠進入海洋
