--- a/android/assets/jsons/translationsByLanguage/Turkish.properties
+++ b/android/assets/jsons/translationsByLanguage/Turkish.properties
@@ -156,6 +156,8 @@ Cost of acquiring new tiles reduced by 25% = Yeni bölge alma maliyeti 25% azalt
 Porcelain Tower = Porselen Kule
 'Things always seem fairer when we look back at them, and it is out of that inaccessible tower of the past that Longing leans and beckons.'  - James Russell Lowell = “Onlara baktığımızda işler her zaman daha adil gözüküyor ve Longing'in eğildiği ve çıldırdığı geçmişin erişilemeyen kulesinin dışında.” - James Russell Lowell
 Free great scientist appears = Ücretsiz büyük bilim adamı ortaya çıkar
+ # Requires translation!
+Science gained from research agreements +50% = 
 
 Ironworks = Demirhane
 Armory = Cephanelik
@@ -1300,6 +1302,8 @@ Who knows what the future holds? = kim bilir gelecek ne gösterecek?
 +10% science and production in all cities = Bütün şehirlerde +10% bilim ve üretim
 Improves movement speed on roads = Yollardaki hareket hızını artırır
 Enables conversion of city production to science = Şehir üretiminin bilime dönüştürülmesini sağlar
+ # Requires translation!
+Enables Research agreements = 
 Enables conversion of city production to gold = Şehir üretiminin altına dönüşmesini sağlar
 Enables embarkation for land units = Kara birimleri için gemiye binmeyi mümkün kılar
 Enables embarked units to enter ocean tiles = Gemiye giren birimlerin okyanusa girmesini sağlar
