--- a/android/assets/jsons/translationsByLanguage/Indonesian.properties
+++ b/android/assets/jsons/translationsByLanguage/Indonesian.properties
@@ -164,6 +164,8 @@ Porcelain Tower = Menara Porselen
  # Requires translation!
 'Things always seem fairer when we look back at them, and it is out of that inaccessible tower of the past that Longing leans and beckons.'  - James Russell Lowell = 
 Free great scientist appears = Ilmuwan hebat gratis muncul
+ # Requires translation!
+Science gained from research agreements +50% = 
 
 Ironworks = Pandai Besi
 Armory = Gudang Senjata
@@ -1595,6 +1597,8 @@ Who knows what the future holds? =
 Improves movement speed on roads = 
  # Requires translation!
 Enables conversion of city production to science = 
+ # Requires translation!
+Enables Research agreements = 
  # Requires translation!
 Enables conversion of city production to gold = 
  # Requires translation!
