--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -156,6 +156,8 @@ Cost of acquiring new tiles reduced by 25% = -25% costo per l'acquisto di nuove 
 Porcelain Tower = Torre di Porcellana
 'Things always seem fairer when we look back at them, and it is out of that inaccessible tower of the past that Longing leans and beckons.'  - James Russell Lowell = 'Le cose sembrano sempre più belle quando ci voltiamo indietro per guardarle, ed è dall'inaccessibile torre del passato che la nostalgia si protende e chiama.' - James Russel Lowell
 Free great scientist appears = Appare un Grande Scienziato
+ # Requires translation!
+Science gained from research agreements +50% = 
 
 Ironworks = Ferriera
 Armory = Armeria
@@ -1304,6 +1306,8 @@ Who knows what the future holds? = Chi sa cosa riservano i prossimi anni?
 +10% science and production in all cities = +10% Scienza e Produzione in tutte le città
 Improves movement speed on roads = Migliora la velocità di movimento sulle strade
 Enables conversion of city production to science = Consente di convertire la Produzione nelle città in Scienza
+ # Requires translation!
+Enables Research agreements = 
 Enables conversion of city production to gold = Consente di convertire la Produzione nelle città in Oro
 Enables embarkation for land units = Permette alle unità terrestri di imbarcarsi e attraversare le caselle acquatiche.
 Enables embarked units to enter ocean tiles = Permette alle unità di imbarcarsi nelle caselle oceaniche
