--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -156,6 +156,8 @@ Cost of acquiring new tiles reduced by 25% = Вартість отримання
 Porcelain Tower = Порцелянова пагода
 'Things always seem fairer when we look back at them, and it is out of that inaccessible tower of the past that Longing leans and beckons.'  - James Russell Lowell = «Речі завжди здаються справедливішими, коли ми дивимось на них з тієї неприступної вежі минулого, де туга сховалася і манить» - Джеймс Расселл Ловелл
 Free great scientist appears = Безкоштовно з’являється видатний науковець
+ # Requires translation!
+Science gained from research agreements +50% = 
 
 Ironworks = Чавуноливарня
 Armory = Зброярня
@@ -1300,6 +1302,8 @@ Who knows what the future holds? = Хто знає, що ховає майбут
 +10% science and production in all cities = Наука і виробництво у всіх містах +10%
 Improves movement speed on roads = Підвищує швидкість руху дорогами
 Enables conversion of city production to science = Дозволяє перемкнути виробництво міста на науку
+ # Requires translation!
+Enables Research agreements = 
 Enables conversion of city production to gold = Дозволяє перемкнути виробництво міста на золото
 Enables embarkation for land units = Дозволяє посадку на судно наземним підрозділам
 Enables embarked units to enter ocean tiles = Дозволяє підрозділам на борту потрапляти до океанських клітинок
