--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -156,6 +156,7 @@ Cost of acquiring new tiles reduced by 25% =
 Porcelain Tower = 
 'Things always seem fairer when we look back at them, and it is out of that inaccessible tower of the past that Longing leans and beckons.'  - James Russell Lowell = 
 Free great scientist appears = 
+Science gained from research agreements +50% = 
 
 Ironworks = 
 Armory = 
@@ -1303,6 +1304,7 @@ Who knows what the future holds? =
 +10% science and production in all cities = 
 Improves movement speed on roads = 
 Enables conversion of city production to science = 
+Enables Research agreements = 
 Enables conversion of city production to gold = 
 Enables embarkation for land units = 
 Enables embarked units to enter ocean tiles = 
