--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -630,6 +630,7 @@ Are you sure you want to delete this map? =
 Upload map = 
 Could not upload map! = 
 Map uploaded successfully! = 
+Saving... =
 
 # Options
 
