--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -298,8 +298,8 @@ Pick a construction = Оберіть будівництво
 Queue empty = Немає черги
 Add to queue = Додати до черги
 Remove from queue = Видалити з черги
-Show stats drilldown = Показати статистику більш детально
-Show construction queue = Показати чергу на побудову
+Show stats drilldown = Показати статистику
+Show construction queue = Показати чергу
 
 Diplomacy = Дипломатія
 War = Війна
