--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -638,19 +638,19 @@ Options = Налаштування
 Display options = Налаштування екрану
 Gameplay options = Налаштування ігроладу
 Other options = Інші налаштування
-Turns between autosaves = Ходів між автозбереженням
+Turns between autosaves = Ходів між автозбереженнями
 Sound effects volume = Гучність звуків
 Music volume = Гучність музики
 Download music = Завантажити музику
 Downloading... = Завантаження…
-Could not download music! = Не вдалося завантажити музику
+Could not download music! = Не вдалося завантажити музику!
 Show = Показати
 Hide = Сховати
 Show worked tiles = Показати оброблювані клітини
 Show resources and improvements = Показати ресурси і вдосконалення
 Check for idle units = Перевіряти неробочі підрозділи
 Move units with a single tap = Переміщення підрозділів одним натиском
-Show tutorials = Показувати підсказки
+Show tutorials = Показувати підказки
 Auto-assign city production = Автоматичне виробництво у містах
 Auto-build roads = Автоматичне будівництво доріг
 Show minimap = Показати мінімапу
@@ -664,8 +664,8 @@ Fontset = Шрифт
 Research of [technologyName] has completed! = [technologyName]: досліджено!
 You have entered a golden age! = Розпочалась Золота доба!
 [resourceName] revealed near [cityName] = [resourceName] виявлено біля [cityName]
-A [greatPerson] has been born in [cityName]! = [cityName] — Народився [greatPerson]!
-We have encountered [civName]! = Виявлена цивілізація: [civName]
+A [greatPerson] has been born in [cityName]! = [greatPerson] народився у місті [cityName]!
+We have encountered [civName]! = Ми зустрілись з нацією [civName]!
 Cannot provide unit upkeep for [unitName] - unit has been disbanded! = Неможливо утримувати [unitName] — підрозділ ліквідовано!
 [cityName] has grown! = Місто [cityName] зросло!
 [cityName] has been founded! = Засновано місто [cityName]!
@@ -761,7 +761,7 @@ Fortification = Фортифікація
 Sleep = Спати
 Moving = У русі
 Set up = Підготуватися
-Upgrade to [unitType] ([goldCost] gold) = Удосконалити до [unitType] ([goldCost] золота)
+Upgrade to [unitType] ([goldCost] gold) = Удосконалити до [unitType] ([goldCost] зол.)
 Found city = Заснувати місто
 Promote = Підвищити
 Health = Здоров’я
