Added 'mountain within 2 tiles' restriction to Machu Picchu as per #1762

--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -119,6 +119,7 @@ Mint =
 Machu Picchu = 
 'Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of Inca Land.'  - Hiram Bingham = 
 Gold from all trade routes +25% = 
+Must have an owned mountain within 2 tiles = 
 
 Aqueduct = 
 40% of food is carried over after a new citizen is born = 
