--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -119,6 +119,7 @@ Mint = Монетний двір
 Machu Picchu = Мачу-Пікчу
 'Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of Inca Land.'  - Hiram Bingham = «'Тільки кілька витворів уяви можуть перевершити цю гранітну цитаделю над бурхливими проваллями Мачу-Пікчу» — Хайрем Бінґем
 Gold from all trade routes +25% = З усіх торгових шляхів золото +25%
+Must have an owned mountain within 2 tiles = В радіусі 2 клітинок на вашій территорії повинна бути гора
 
 Aqueduct = Акведук
 40% of food is carried over after a new citizen is born = 40% їжі залишається після народження нового громадянина
@@ -156,6 +157,7 @@ Cost of acquiring new tiles reduced by 25% = Вартість отримання
 Porcelain Tower = Порцелянова пагода
 'Things always seem fairer when we look back at them, and it is out of that inaccessible tower of the past that Longing leans and beckons.'  - James Russell Lowell = «Речі завжди здаються справедливішими, коли ми дивимось на них з тієї неприступної вежі минулого, де туга сховалася і манить» - Джеймс Расселл Ловелл
 Free great scientist appears = Безкоштовно з’являється видатний науковець
+Science gained from research agreements +50% = +50% науки з угоди про дослідження
 
 Ironworks = Чавуноливарня
 Armory = Зброярня
@@ -761,7 +763,7 @@ Fortification = Фортифікація
 Sleep = Спати
 Moving = У русі
 Set up = Підготуватися
-Upgrade to [unitType] ([goldCost] gold) = Удосконалити до [unitType] ([goldCost] зол.)
+Upgrade to [unitType] ([goldCost] gold) = Удосконалити до [unitType] ([goldCost] золота)
 Found city = Заснувати місто
 Promote = Підвищити
 Health = Здоров’я
@@ -1300,8 +1302,9 @@ Future Tech = Технологія майбутнього
 Who knows what the future holds? = Хто знає, що ховає майбутнє?
 +10% science and production in all cities = Наука і виробництво у всіх містах +10%
 Improves movement speed on roads = Підвищує швидкість руху дорогами
-Enables conversion of city production to science = Дозволяє перемкнути виробництво міста на науку
-Enables conversion of city production to gold = Дозволяє перемкнути виробництво міста на золото
+Enables conversion of city production to science = Дозволяє конвертувати виробництво міста в науку
+Enables Research agreements = Вмикає угоди про дослідження
+Enables conversion of city production to gold = Дозволяє конвертувати виробнитво міста в золото
 Enables embarkation for land units = Дозволяє посадку на судно наземним підрозділам
 Enables embarked units to enter ocean tiles = Дозволяє підрозділам на борту потрапляти до океанських клітинок
 Increases embarked movement +1 = Рух підрозділів на борту +1 
