--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -63,8 +63,7 @@ Colossus = Koloss
 
 Temple = Tempel
 Burial Tomb = Grabstätte
- # Requires translation!
-Doubles Gold given to enemy if city is captured = 
+Doubles Gold given to enemy if city is captured = Verdoppelt die Menge an Gold für den Feind falls die Stadt erorbert wird
  # Requires translation!
 Mud Pyramid Mosque = 
 
@@ -302,22 +301,14 @@ Requires a [buildingName] in this city = Benötigt das Gebäude [buildingName] i
 Requires [resource] = Benötigt [resource]
 Required tech: [requiredTech] = Benötigt Technologie: [requiredTech]
 
- # Requires translation!
-Current construction = 
- # Requires translation!
-Construction queue = 
- # Requires translation!
-Pick a construction = 
- # Requires translation!
-Queue empty = 
- # Requires translation!
-Add to queue = 
- # Requires translation!
-Remove from queue = 
- # Requires translation!
-Show stats drilldown = 
- # Requires translation!
-Show construction queue = 
+Current construction = Aktuelle Konstruktion
+Construction queue = Warteschlange für Konstruktionen
+Pick a construction = Wähle eine Konstruktion
+Queue empty = Warteschlange leer
+Add to queue = Füge zur Warteschlange hinzu
+Remove from queue = Entferne von Warteschlange
+Show stats drilldown = Zeige Statistik-Drilldown
+Show construction queue = Zeige Warteschlange für Konstruktionen
 
 Diplomacy = Diplomatie
 War = Krieg
