Update Simplified_Chinese.properties (#1756)
Co-authored-by: Yair Morgenstern <yairm210@hotmail.com>

--- a/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
@@ -1674,10 +1674,8 @@ Reduces damage taken from interception by 50% = 遭受拦截时的损伤-50%
 Bonus when intercepting [amount]% = 执行拦截任务时+[amount]%战斗力
 Ambush I = 伏击I级
 Ambush II = 伏击II级
- # Requires translation!
-Can carry 2 aircraft = 
+Can carry 2 aircraft = 可以带两家飞机
 Haka War Dance = 哈卡战舞
 -10% combat strength for adjacent enemy units = 相邻的敌方单位-10%战斗力
 Rejuvenation = 返老還童
- # Requires translation!
-All healing effects doubled = 
+All healing effects doubled = 所有治疗效果加倍
